[gd_scene load_steps=4 format=3 uid="uid://c50ovsa2l8p3m"]

[ext_resource type="PackedScene" uid="uid://cnr04q5ii5u3w" path="res://Scenes/3dtest.tscn" id="1_gkesw"]
[ext_resource type="Script" path="res://Scripts/Menu/menu_buttons.gd" id="2_secvn"]
[ext_resource type="Script" path="res://Scripts/Debug/test_fps.gd" id="3_l6jhe"]

[node name="Node2D" type="Node2D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
mouse_filter = 1

[node name="SubViewportContainer" type="SubViewportContainer" parent="Control"]
texture_filter = 1
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="SubViewport" type="SubViewport" parent="Control/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="3Dtest" parent="Control/SubViewportContainer/SubViewport" instance=ExtResource("1_gkesw")]

[node name="Menu_UI" type="CanvasLayer" parent="."]

[node name="Menu_Buttons" type="Control" parent="Menu_UI"]
layout_mode = 3
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -360.0
offset_bottom = -360.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2_secvn")

[node name="Label" type="Label" parent="Menu_UI/Menu_Buttons"]
offset_left = 150.0
offset_top = 300.0
offset_right = 234.0
offset_bottom = 323.0
text = "Godot Test"

[node name="VBoxContainer" type="VBoxContainer" parent="Menu_UI/Menu_Buttons"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.2
anchor_bottom = 0.2
offset_left = 150.0
offset_top = 330.0
offset_right = 94.0
offset_bottom = 480.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Button_Play" type="Button" parent="Menu_UI/Menu_Buttons/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
text = "New Game"

[node name="Button_Settings" type="Button" parent="Menu_UI/Menu_Buttons/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
text = "Settings"

[node name="Button_Quit" type="Button" parent="Menu_UI/Menu_Buttons/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
text = "Quit"

[node name="FPS_Counter" type="Label" parent="."]
offset_left = 5.0
offset_right = 55.0
offset_bottom = 23.0
text = "FPS 00"
script = ExtResource("3_l6jhe")

[connection signal="pressed" from="Menu_UI/Menu_Buttons/VBoxContainer/Button_Play" to="Menu_UI/Menu_Buttons" method="_play_pressed"]
[connection signal="pressed" from="Menu_UI/Menu_Buttons/VBoxContainer/Button_Settings" to="Menu_UI/Menu_Buttons" method="_settings_pressed"]
[connection signal="pressed" from="Menu_UI/Menu_Buttons/VBoxContainer/Button_Quit" to="Menu_UI/Menu_Buttons" method="_quit_pressed"]
